<resources>
    <string name="app_name">Data Recorder</string>
    <string name="main_greeting">Welcome to the Data Recorder App!</string>
    <string name="main_startup">Please select one of the two options listed below to start.</string>
    <string name="main_new_project">Create a new project</string>
    <string name="main_select_project">Select an existing project</string>
    <string name="main_important_permissions">Important permissions are missing. Without these the app does not work!</string>
    <string name="main_request_permissions">Request permissions</string>
    <string name="new_project_header">Create a new project</string>
    <string name="new_project_name">Name:</string>
    <string name="new_project_description">Description:</string>
    <string name="new_project_add_class">Add class</string>
    <string name="new_project_save">Save project</string>
    <string name="new_project_classes">Classes (hold long to remove class):</string>
    <string name="machine_learning_heading">Machine Learning Time!</string>
    <string name="machine_learning_select_label">Select label (%1s):</string>
    <string name="machine_learning_auto_record_feature">Auto start:</string>
    <string name="machine_learning_auto_record_vector">Sensitivity (%1d):</string>
    <string name="machine_learning_save_recording">Save Recording</string>
    <string name="machine_learning_start_recording">Tab to start the Recording</string>
    <string name="machine_learning_is_recording">Currently Recording… Tab to stop</string>
    <string name="machine_learning_is_waiting">Waiting for Gesture… Tab to stop</string>
    <string name="machine_learning_auto_stop">Auto stop:</string>
    <string name="machine_learning_frames">Frames (%1d):</string>
    <string name="machine_learning_project">Project: %1s</string>
    <string name="add_class_header">Add a Class</string>
    <string name="add_class_label">Label:</string>
    <string name="add_class_description">Description:</string>
    <string name="add_class_cancel">Cancel</string>
    <string name="add_class_save">Save</string>
</resources>
