<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/text_main_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_greeting"
            android:textSize="22sp"
            android:layout_marginVertical="64dp"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_startup"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/button_create_new_project"
            android:text="@string/main_new_project"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/button_select_existing_project"
            android:text="@string/main_select_project"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/text_permissions_missing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/main_important_permissions"
            android:textColor="#f00"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/request_permissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_request_permissions" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>